--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,16 @@
 <resources>
     <string name="app_name">IfttUtilities</string>
-    <string name="title_activity_uber_helper">Uber</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
+    <string name="title_activity_uber_home">Uber</string>
+    <string name="tab_text_1">Util</string>
+    <string name="tab_text_2">Settings</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="uber_work_to_home">Work To Home</string>
+    <string name="uber_home_to_work">Home To Work</string>
+    <string name="pin_shortcut_work_to_home">Pin shortcut Work To Home</string>
+    <string name="pin_shortcut_home_to_work">Pin Shortcut Home To Work</string>
+    <string name="get_uber_products">Get Uber Products</string>
+    <string name="take_me_home">Take me Home</string>
+    <string name="pin_shortcut_to_home">Pin shortcut To Home</string>
 </resources>
